# film-directory-archiver

./: README.md  archiver.py  pyproject.toml
src/core/films/: __init__.py  get.py  make.py
src/helpers/: api.py  filters.py
src/static/css/: style.css
src/static/js/: search.js
templates/: base.jinja2  film.jinja2  index.jinja2  search.jinja2  year.jinja2
